--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ h3 { font-weight: 700;
 }
 
 .back-to-top i:hover {
-  background: #913b7a;
+  background: #CB87B4;
   color: #fff;
 }
 
@@ -368,7 +368,7 @@ h3 { font-weight: 700;
   /*background-size: contain;*/
   background-size: cover;
   background-position: center bottom;
-  margin-top: 70px;
+  margin-top: 30px;
   margin-bottom: 0px;
   padding: 60px 0;
 
